[tool.poetry]
name = "gym_ros"
version = "0.1.0"
description = "ROS API to OpenAI Gym library"
authors = ["Matesanz <Matesanz.Cuadrado@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
pre-commit = "^2.15.0"
gym = "^0.20.0"
opencv-python = "^4.5.3"
pyglet = "^1.5.21"
PyVirtualDisplay = "^2.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
rospkg = "^1.3.0"
catkin-pkg = "^0.4.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
